change build.sh